fix: Back to Top button should be behind dimmer

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body.pushable>.pusher {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    z-index: 9999;
+    z-index: 100;
     background: #f5f5f5;
     transition: opacity 0.2s ease-out;
     opacity: 0;
